# Freelance_Portfolio

./: .gitignore  README.md
ci-pipeline-starter/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
ci-pipeline-starter/.github/workflows/: ci.yml  release.yml
ci-pipeline-starter/docs/: architecture.excalidraw
ci-pipeline-starter/src/build_report/: __init__.py  formatter.py  parser.py
ci-pipeline-starter/tests/: test_formatter.py  test_parser.py
python-automation-scripts/: .gitignore  README.md  requirements-dev.txt
python-automation-scripts/.github/workflows/: ci.yml
python-automation-scripts/docs/: architecture.excalidraw
python-automation-scripts/scripts/: api_health_check.py  csv_processor.py  log_analyzer.py
python-automation-scripts/tests/: test_csv_processor.py  test_log_analyzer.py
repo-health-report/: .gitignore  HEALTH_REPORT.html  HEALTH_REPORT.md  README.md  config.json  run_report.py
repo-health-report/.github/workflows/: ci.yml
repo-health-report/docs/: architecture.excalidraw
repo-health-report/src/: github_client.py  metrics.py  report.py
repo-health-report/tests/: test_metrics.py  test_report.py
