[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "build-report"
version = "0.1.0"
description = "Parse and format CI/CD build logs into structured Markdown/JSON reports"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "João Madureira" }]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/ci-pipeline-starter"
Repository = "https://github.com/YOUR_USERNAME/ci-pipeline-starter"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203"]
